SGFE-1139 Header&Footer/Sony Xperia TL/Spacing of "Show all Results" button -- fixed margins on full-width button.

--- a/src/packages/modules/global-header-footer/css/_responsive-navbar.scss
+++ b/src/packages/modules/global-header-footer/css/_responsive-navbar.scss
@@ -1276,6 +1276,7 @@
           .btn-show-all-results {
             width: auto;
             display:block;
+            margin: 5px 20px 50px;
           }
         }
       }
